--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:support-v4:25.3.1'
+
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+
     testCompile 'junit:junit:4.12'
 }
